--- a/git_test.Rmd
+++ b/git_test.Rmd
@@ -10,3 +10,5 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 Hi maddie is in the house YUH welcome to the collab
+
+Hey Maddie! My sister's name is Maddy. :)
