--- a/git_test.Rmd
+++ b/git_test.Rmd
@@ -12,3 +12,5 @@ knitr::opts_chunk$set(echo = TRUE)
 Hi maddie is in the house YUH welcome to the collab
 
 Hey Maddie! My sister's name is Maddy. :)
+
+Thats super cool! she must be sick
