Maddy's have more fun.

--- a/git_test.Rmd
+++ b/git_test.Rmd
@@ -14,3 +14,5 @@ Hi maddie is in the house YUH welcome to the collab
 Hey Maddie! My sister's name is Maddy. :)
 
 Thats super cool! she must be sick
+
+She is! Haha. Are you Madeline or always Maddie? 
