--- a/git_test.Rmd
+++ b/git_test.Rmd
@@ -16,3 +16,5 @@ Hey Maddie! My sister's name is Maddy. :)
 Thats super cool! she must be sick
 
 She is! Haha. Are you Madeline or always Maddie? 
+
+Madeleine to people that met me before high school actually!
