--- a/git_test.Rmd
+++ b/git_test.Rmd
@@ -17,4 +17,4 @@ Thats super cool! she must be sick
 
 She is! Haha. Are you Madeline or always Maddie? 
 
-Madeleine to people that met me before high school actually!
+Madeleine to people that met me before high school actually! What are ya snacking on for lunch
