--- a/git_test.Rmd
+++ b/git_test.Rmd
@@ -18,3 +18,5 @@ Thats super cool! she must be sick
 She is! Haha. Are you Madeline or always Maddie? 
 
 Madeleine to people that met me before high school actually! What are ya snacking on for lunch
+
+Haha. I saw you were eating too. What is your snack? I always feel weird eating on camera. But gotta do it. A salad but I added leftover roasted coliflower which was a game changer. 
